--- a/sproduct.html
+++ b/sproduct.html
@@ -50,7 +50,8 @@
             <div class="single-pro-details">
                 <h6>Home / T-Shirt</h6>
                 <h4>Men's Fashion T Shirt</h4>
-                <h2>$139.00</h2>
+                <h2>₹899</h2>
+                <form id="1" method="get">
                 <select>
                     <option>Select Size</option>
                     <option>XL</option>
@@ -60,7 +61,9 @@
                 </select>
                 <input type="number" value="1">
                 <button class="normal">Add To Cart</button>
+                </form>
                 <h4>Product Details</h4>
+
                 <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per
                 sq. yd. fabric constructed from 100% cotton, this classic fit preshrunk jersey 
                 knit provides unmatched comfort with each wear. Featuring a taped neck 
@@ -76,7 +79,7 @@
                 <div class="pro">
                     <img src="img/products/n1.jpg">
                     <div class="des">
-                        <span>adidas</span>
+                        <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -84,14 +87,14 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>$78</h4>
+                        <h4>₹899</h4>
                     </div>
                     <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                 </div>
                 <div class="pro">
                     <img src="img/products/n2.jpg">
                     <div class="des">
-                        <span>adidas</span>
+                        <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -106,7 +109,7 @@
                 <div class="pro">
                     <img src="img/products/n3.jpg">
                     <div class="des">
-                        <span>adidas</span>
+                        <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
@@ -121,7 +124,7 @@
                 <div class="pro">
                     <img src="img/products/n4.jpg">
                     <div class="des">
-                        <span>adidas</span>
+                        <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
