--- a/sproduct1.html
+++ b/sproduct1.html
@@ -50,7 +50,8 @@
             <div class="single-pro-details">
                 <h6>Home / T-Shirt</h6>
                 <h4>Men's Fashion T Shirt</h4>
-                <h2>$139.00</h2>
+                <h2>₹599</h2>
+                <form id="2" method="get">
                 <select>
                     <option>Select Size</option>
                     <option>XL</option>
@@ -61,6 +62,7 @@
                 <input type="number" value="1">
                 <button class="normal">Add To Cart</button>
                 <h4>Product Details</h4>
+                </form>
                 <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per
                 sq. yd. fabric constructed from 100% cotton, this classic fit preshrunk jersey 
                 knit provides unmatched comfort with each wear. Featuring a taped neck 
