--- a/sproduct2.html
+++ b/sproduct2.html
@@ -50,7 +50,8 @@
             <div class="single-pro-details">
                 <h6>Home / T-Shirt</h6>
                 <h4>Men's Fashion T Shirt</h4>
-                <h2>$139.00</h2>
+                <h2>₹749</h2>
+                <form id="3" method="get">
                 <select>
                     <option>Select Size</option>
                     <option>XL</option>
@@ -60,6 +61,7 @@
                 </select>
                 <input type="number" value="1">
                 <button class="normal">Add To Cart</button>
+                </form>
                 <h4>Product Details</h4>
                 <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per
                 sq. yd. fabric constructed from 100% cotton, this classic fit preshrunk jersey 
@@ -92,14 +94,14 @@
                     <img src="img/products/n2.jpg">
                     <div class="des">
                         <span>adidas</span>
-                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <h5>Puma Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>$78</h4>
+                        <h4>₹599</h4>
                     </div>
                     <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                 </div>
@@ -107,7 +109,7 @@
                     <img src="img/products/n3.jpg">
                     <div class="des">
                         <span>adidas</span>
-                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <h5>Adidas Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
