--- a/sproduct3.html
+++ b/sproduct3.html
@@ -51,6 +51,7 @@
                 <h6>Home / T-Shirt</h6>
                 <h4>Men's Fashion T Shirt</h4>
                 <h2>$139.00</h2>
+                <form id="4" method="get">
                 <select>
                     <option>Select Size</option>
                     <option>XL</option>
@@ -60,6 +61,7 @@
                 </select>
                 <input type="number" value="1">
                 <button class="normal">Add To Cart</button>
+               </form>
                 <h4>Product Details</h4>
                 <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. per
                 sq. yd. fabric constructed from 100% cotton, this classic fit preshrunk jersey 
