--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <section id="header">
-            <a href="#"><img src="img/logo1.png" class="logo" alt=""></a>
+            <a href="index.html"><img src="img/logo1.png" class="logo" alt=""></a>
             <div>
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
@@ -180,7 +180,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>₹78</h4>
+                        <h4>₹780</h4>
                     </div>
                     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                     <a href="#"><lord-icon class="cart"
@@ -220,7 +220,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>₹78</h4>
+                        <h4>₹699</h4>
                     </div>
                     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                     <a href="#"><lord-icon class="cart"
@@ -234,7 +234,7 @@
         <section id="banner" class="section-m1">
             <h4>Repair Services</h4>
             <h2>Up to <span>70% Off</span> - All t-Shirts & Accessories</h2>
-            <button class="normal">Explore More</button>
+            <a href="shop.html"><button class="normal">Explore More</button></a>
         </section>
         
         <footer class="section-p1">
