--- a/sproduct.html
+++ b/sproduct.html
@@ -13,7 +13,7 @@
 
     <body>
         <section id="header">
-            <a href="#"><img src="img/logo1.png" class="logo" alt=""></a>
+            <a href="index.html"><img src="img/logo1.png" class="logo" alt=""></a>
             <div>
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
@@ -77,7 +77,22 @@
             <p>Summer Collection New Modern Design</p>
             <div class="pro-container">
                 <div class="pro">
-                    <img src="img/products/n1.jpg">
+                    <img src="img/products/f2.jpg">
+                    <div class="des">
+                        <span></span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>₹759</h4>
+                    </div>
+                    <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/f3.jpg">
                     <div class="des">
                         <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -92,7 +107,7 @@
                     <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/n2.jpg">
+                    <img src="img/products/f4.jpg">
                     <div class="des">
                         <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -102,12 +117,12 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>₹899</h4>
+                        <h4>₹649</h4>
                     </div>
                     <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/n3.jpg">
+                    <img src="img/products/f5.jpg">
                     <div class="des">
                         <span></span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -117,22 +132,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <h4>₹899</h4>
-                    </div>
-                    <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-                </div>
-                <div class="pro">
-                    <img src="img/products/n4.jpg">
-                    <div class="des">
-                        <span></span>
-                        <h5>Cartoon Astronaut T-Shirts</h5>
-                        <div class="star">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <h4>₹899</h4>
+                        <h4>₹699</h4>
                     </div>
                     <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
                 </div>
