Modified files according to mentor

--- a/compare.html
+++ b/compare.html
@@ -38,12 +38,7 @@
                             <small>Dashboard</small>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-user-alt"></span>
-                            <small>Profile</small>
-                        </a>
-                    </li>
+
                     <li>
                         <a href="more_analytics.html">
                             <span class="las la-user-alt"></span>
@@ -75,7 +70,7 @@
                     <span class="las la-bars"></span>
                 </label>
 
-                <div class="header-menu">
+                <!-- <div class="header-menu">
                     <label for="">
                         <span class="las la-search"></span>
                     </label>
@@ -96,7 +91,7 @@
                         <span class="las la-power-off"></span>
                         <span>Logout</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </header>
         <main>
