--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
                             <small>Dashboard</small>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-user-alt"></span>
-                            <small>Profile</small>
-                        </a>
-                    </li>
+
                     <li>
                         <a href="more_analytics.html">
                             <span class="las la-user-alt"></span>
@@ -75,7 +70,7 @@
                     <span class="las la-bars"></span>
                 </label>
 
-                <div class="header-menu">
+                <!-- <div class="header-menu">
                     <label for="">
                         <span class="las la-search"></span>
                     </label>
@@ -96,7 +91,7 @@
                         <span class="las la-power-off"></span>
                         <span>Logout</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </header>
 
@@ -127,7 +122,7 @@
 
                     <div class="card">
                         <div class="card-head">
-                            <h2>1,07,200</h2>
+                            <h2>96</h2>
                             <span class="las la-user-friends"></span>
                         </div>
                         <div class="card-progress">
@@ -140,7 +135,7 @@
 
                     <div class="card">
                         <div class="card-head">
-                            <h2>3,40,230</h2>
+                            <h2>96</h2>
                             <span class="las la-eye"></span>
                         </div>
                         <div class="card-progress">
@@ -151,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-head">
                             <h2>Rs. 6,53,200</h2>
                             <span class="las la-shopping-cart"></span>
@@ -162,9 +157,9 @@
                                 <div class="indicator three" style="width: 65%"></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-head">
                             <h2>47,500</h2>
                             <span class="las la-envelope"></span>
@@ -175,7 +170,7 @@
                                 <div class="indicator four" style="width: 90%"></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
 
@@ -218,7 +213,8 @@
                                     <td>#5030</td>
                                     <td>
                                         <div class="client">
-                                            <div class="client-img bg-img" style="background-image: url(img/3.jpeg)">
+                                            <div class="client-img bg-img"
+                                                style="background-image: url(img/Compare/Shirts/shirt1.jpg)">
                                             </div>
                                             <div class="client-info">
                                                 <h4>Andrew Bruno</h4>
@@ -227,13 +223,13 @@
                                         </div>
                                     </td>
                                     <td>
-                                        $3171
+                                        Rs.3171
                                     </td>
                                     <td>
-                                        19 April, 2022
+                                        19-03-2023
                                     </td>
                                     <td>
-                                        -$205
+                                        0
                                     </td>
                                     <td>
                                         <div class="actions">
@@ -247,7 +243,8 @@
                                     <td>#5031</td>
                                     <td>
                                         <div class="client">
-                                            <div class="client-img bg-img" style="background-image: url(img/1.jpeg)">
+                                            <div class="client-img bg-img"
+                                                style="background-image: url(img/Compare/Shirts/shirt1.jpg)">
                                             </div>
                                             <div class="client-info">
                                                 <h4>Exty Bruno</h4>
@@ -256,13 +253,13 @@
                                         </div>
                                     </td>
                                     <td>
-                                        $3171
+                                        Rs. 3171
                                     </td>
                                     <td>
                                         19 April, 2022
                                     </td>
                                     <td>
-                                        -$205
+                                        -10
                                     </td>
                                     <td>
                                         <div class="actions">
@@ -276,7 +273,8 @@
                                     <td>#5032</td>
                                     <td>
                                         <div class="client">
-                                            <div class="client-img bg-img" style="background-image: url(img/1.jpeg)">
+                                            <div class="client-img bg-img"
+                                                style="background-image: url(img/Compare/Shirts/shirt1.jpg)">
                                             </div>
                                             <div class="client-info">
                                                 <h4>Exty Bruno</h4>
@@ -285,10 +283,10 @@
                                         </div>
                                     </td>
                                     <td>
-                                        $2171
+                                        Rs. 2171
                                     </td>
                                     <td>
-                                        19 April, 2022
+                                        19 Jan, 2023
                                     </td>
                                     <td>
                                         <span class="paid">Paid</span>
@@ -306,7 +304,8 @@
                                     <td>#5033</td>
                                     <td>
                                         <div class="client">
-                                            <div class="client-img bg-img" style="background-image: url(img/1.jpeg)">
+                                            <div class="client-img bg-img"
+                                                style="background-image: url(img/Compare/Shirts/shirt1.jpg)">
                                             </div>
                                             <div class="client-info">
                                                 <h4>Exty Bruno</h4>
@@ -315,10 +314,10 @@
                                         </div>
                                     </td>
                                     <td>
-                                        $2171
+                                        Rs. 2171
                                     </td>
                                     <td>
-                                        19 April, 2022
+                                        19 Feb, 2022
                                     </td>
                                     <td>
                                         <span class="paid">Paid</span>
@@ -335,7 +334,8 @@
                                     <td>#5034</td>
                                     <td>
                                         <div class="client">
-                                            <div class="client-img bg-img" style="background-image: url(img/3.jpeg)">
+                                            <div class="client-img bg-img"
+                                                style="background-image: url(img/Compare/Shirts/shirt1.jpg)">
                                             </div>
                                             <div class="client-info">
                                                 <h4>Andrew Bruno</h4>
@@ -344,13 +344,13 @@
                                         </div>
                                     </td>
                                     <td>
-                                        $3171
+                                        Rs.3171
                                     </td>
                                     <td>
                                         19 April, 2022
                                     </td>
                                     <td>
-                                        -$205
+                                        +10
                                     </td>
                                     <td>
                                         <div class="actions">
